kubernetes/apps/media/lazylibrarian/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: lazylibrarian
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: lazylibrarian
  ports:
    - port: 5299
      targetPort: 5299
