kubernetes/apps/media/lazylibrarian/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lazylibrarian
  namespace: media
spec:
  ingressClassName: traefik
  rules:
    - host: lazylibrarian.homelab.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lazylibrarian
                port:
                  number: 5299
